Finish recipe pages

--- a/recipes/sloppyjoe.html
+++ b/recipes/sloppyjoe.html
@@ -7,5 +7,26 @@
 </head>
 <body>
     <h1>Sloppy Joe recipe</h1>
+    <img src="https://imagesvc.meredithcorp.io/v3/mm/image?url=https%3A%2F%2Fimages.media-allrecipes.com%2Fuserphotos%2F747244.jpg&w=272&h=272&c=sc&poi=face&q=85"
+        alt ="Sloppy joe">
+    <p><h3>Homemade Sloppy Joes</h3></p>
+    <p>Despite the name of this iconic retro dish, the secret to a great sloppy joe is a thick, rich, almost dry consistency, which allows the sandwich to be eaten with your hands. Serve on hamburger buns.</p>
+    <p><h4>Ingredients:</h4></p>
+    <ul>
+        <li>1 ½ pounds extra lean ground beef</li>
+        <li>½ onion, diced</li>
+        <li>2 cloves garlic, minced</li>
+        <li>1 green pepper, diced</li>
+        <li>¾ cup ketchup</li>
+        <li>1 teaspoon Dijon mustard</li>
+        <li>1 pinch cayenne pepper to taste</li>
+    </ul>
+    <p><h4>Steps:</h4></p>
+    <ol>
+        <li>Place ground beef and onion in a large skillet. Turn heat to medium and cook and stir the mixture constantly until the beef is browned and forms small crumbles, about 10 minutes.</li>
+        <li>Stir in garlic and green bell pepper; cook and stir until softened, 2 to 3 minutes. Add 1 cup water and stir, scraping the pan to dissolve any brown flavor bits from the bottom of the skillet.</li>
+        <li>Mix in ketchup, Worcestershire sauce, brown sugar, Dijon mustard, salt, and black pepper. Add 1 more cup water and return mixture to a simmer. Reduce heat to low and simmer, stirring occasionally, until the liquid has evaporated and the mixture is thick, about 40 minutes.</li>
+        <li>Season with salt , black pepper, and cayenne pepper to taste.</li> 
+    </ol>
 </body>
 </html>
