--- a/recipes/cheesecake.html
+++ b/recipes/cheesecake.html
@@ -7,17 +7,28 @@
 </head>
 <body>
     <h1>Cheesecake recipe</h1>
-    <img src=
-        alt =>
+    <img src="https://imagesvc.meredithcorp.io/v3/mm/image?url=https%3A%2F%2Fimages.media-allrecipes.com%2Fuserphotos%2F1867748.jpg"
+        alt ="Cheesecake">
     <p><h3>NY-style Cheesecake</h3></p>
     <p>This cheesecake is New York-style, fool-proof, easy, and super-delicious.</p>
     <p><h4>Ingredients:</h4></p>
     <ul>
-        <li></li>
+        <li>1½ cups graham cracker crumbs</li>
+        <li>¼ cup white sugar</li>
+        <li>⅓ cup butter, melted</li>
+        <li>3 (8 ounce) packages cream cheese, room temperature</li>
+        <li>4 eggs, room temperature</li>
+        <li>1 tablespoon vanilla extract</li>
+        <li>1 cup white sugar</li>
     </ul>
     <p><h4>Steps:</h4></p>
     <ol>
-        <li></li> 
+        <li>Preheat oven to 350 degrees F (175 degrees C).</li>
+        <li>Mix together the cracker crumbs, sugar, and butter in a bowl until evenly moistened. Press into the bottom and 1/2 inch up the sides of a 9-inch springform pan.</li>
+        <li>In a large bowl, mix together the cream cheese and sugar with an electric mixer until smooth. Blend in the eggs, 1 tablespoon of vanilla, and cream of tartar. Pour over the pie crust.</li>
+        <li>Bake in preheated oven until the center is set, about 50 minutes. Allow to cool on counter for 5 minutes.</li>
+        <li>Mix together the sour cream, 1 teaspoon vanilla, and 1/2 cup sugar in a bowl until smooth; carefully pour over cheesecake starting from the sides of the pan and working your way to the center.</li>
+        <li>Return to oven for another 5 minutes. Allow to cool in pan to room temperature. Refrigerate for at least 6 hours before serving.</li>
     </ol>
 </body>
 </html>
