--- a/index.html
+++ b/index.html
@@ -7,5 +7,21 @@
 
     <body>
         <h1>Odin recipes</h1>
+        <p>My favourite recipes:</p>
+        <ul>
+            <li>
+                <a href="/recipes/sloppyjoe.html"
+                   target="_blank">Sloppy Joe</a>
+            </li>
+            <li>
+                <a href="/recipes/cheesecake.html"
+                   target="_blank">Cheesecake</a>
+            </li>
+            <li>
+                <a href="/recipes/cookies.html"
+                   target="_blank">Cookies</a>
+            </li>
+        </ul>
+        
     </body>
 </html>
